# cmakeTemplate

./: FIND_PACKAGE.txt  README.md
cmake_cpp/: CMakeLists.txt  README  input.cc
cmake_cpp/include/: date1.hh
cmake_hdf5/: CMakeLists.txt  HDF5安装说明.txt  cmake.sh
cmake_hdf5/src/: CMakeLists.txt~  Circle.cc~
cmake_latex_only/: CMakeLists.txt
cmake_matlab/: CMakeLists.txt  CMakeLists.txt~  draw.C~  input.cc~  main.cc  main.cc~  tree.cc~  tree.cxx~
cmake_matlab_auto/: CMakeLists.txt
cmake_matlab_manual/: main.cc
cmake_muban/: CMakeLists.txt  CMakeLists.txt~  cmake.sh~
cmake_muban/example/armadillo/: LAPACK函数介绍.doc  armadillos数学库使用例程.docx
cmake_muban/include/: Circle.hh
cmake_muban/src/: Circle.cc  date1.cc~
cmake_root/: CMakeLists.txt  draw.C  duqu.cc  mainGUI.cc  xieru.cc
cmake_root1/: CMakeLists.txt  tree.cc
cmake_root2/: CMakeLists.txt  mainGUI.cc
cmake_root2/include/: wuLinkDef.h  wuMainFrame.hh  wuROOT.hh  wuROOTHistogramRand.hh
cmake_root2/src/: wuMainFrame.cc  wuROOTHistogramRand.cc
cmake_root_Dict/: CMakeLists.txt
cmake_so_a/: CMakeLists.txt  CMakeLists.txt~  input.cc~
cmake_so_a/include/: CMakeLists.txt~
cmake_so_a/src/: date1.cc
cmake_xelatex/: CMakeLists.txt  prc.tex  reference.bib
cmake_xelatex/Pictures/: alphap065156.eps  alphap065156ph.eps  alphap095154.eps  alphap095154ph.eps
